--- a/style.css
+++ b/style.css
@@ -13,14 +13,13 @@ text-align: center;
 }
 
 .head p{
-    font-size: 16px;
+    font-size: 24px;
     text-align: center;
     color: rgb(0, 36, 104);
 }
 
 #myTextarea{
-    border-radius: 20px;
-
+    border-radius: 10px;
     outline: none;
     border: none ;
     background-image: linear-gradient(to bottom,rgb(203, 234, 255),rgb(170, 221, 255),rgb(141, 210, 255),rgb(215, 239, 255));
@@ -35,72 +34,58 @@ text-align: center;
     align-items: center;
 }
 
-.pics{
-    display: flex;
-    flex-direction: column;
-    width: 100px;
-}
 
 #sanskar{
-    position: absolute;
-    top: 20%;
-    width: 300px;
-    margin-right: 50px;
-
-    transform: translateX(-30px);
+       width: 300px;
     visibility: hidden;
 }
 
-
-
 #slang{
-   
-        position: absolute;
-        top: 20%;
-        width: 200px;
-        margin-right: 50px;
-        transform: translateX(50px);
+        width: 200px;    
         visibility: hidden;
-}
-
-button{ 
-    background-image: linear-gradient(to bottom,rgb(255, 196, 196),rgb(255, 173, 173),rgb(255, 115, 115));
-    font-size: 16px;
-    font-weight: 600;
-    border: none;
-    outline: none;
-    width: 200px;
-    height: 50px;
-    border-radius: 15px;
-}
-
-button:hover{
-    background-image: linear-gradient(to bottom,rgb(255, 170, 170),rgb(255, 136, 136),rgb(255, 82, 82));
-    
 }
 
 h5{text-align: center;}
 
 .result{
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 10px;
     font-size: 24px;
     text-align: center;
     visibility: visible;
-    
     width: 650px;
     height: 500px;
     background-image: linear-gradient(to bottom,rgb(255, 248, 235),rgb(255, 239, 169),rgb(255, 220, 144),rgb(255, 203, 144));
 }
 
-/* .hidden{
-    border-radius: 20px;
+@media(max-width:750px){
+    .head p{
+        font-size: 18px;
+    }
 
-    font-size: 16px;
-    text-align: center;
-    visibility: visible;
-    margin-top: 50px;
-    width: 650px;
-    height: 500px;
-    background-image: linear-gradient(to bottom,rgb(255, 248, 235),rgb(255, 239, 169),rgb(255, 220, 144),rgb(255, 203, 144));
-} */
+    .textarea{border-radius: 5px;}
+    
+    #sanskar{
+        width: 200px;        
+        visibility: hidden;
+    }
+
+    .pics{ display: flex; justify-content: space-around;}
+ 
+    #slang{
+            width: 150px;
+            visibility: hidden;
+    }
+    
+    h5{text-align: center;}  
+    
+    .result{
+        border-radius: 10px;
+        padding: 5px;
+        font-size: 18px;
+        text-align: center;        
+        width: 250px;
+        height: 250px;
+        background-image: linear-gradient(to bottom,rgb(255, 248, 235),rgb(255, 239, 169),rgb(255, 220, 144),rgb(255, 203, 144));
+    }
+}
